src/components/search-modal/search-modal.scss
.modal {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  inset: 0;
  z-index: 1000;

  &.hidden {
    display: none;
  }

  &__overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.8);
    z-index: 0;

    @media screen and (max-width: $breakpoint-md) {
      display: none;
    }
  }
  &__dialog {
    width: 100%;
    max-width: 800px;
    max-height: 80vh;
    border-radius: $radius;
    background-color: $bg-color-primary;
    overflow: hidden;

    @media screen and (max-width: $breakpoint-md) {
      max-height: none;
      height: 100vh;
      border-radius: 0;
    }
  }
  &__header {
    position: relative;
    background-color: $bg-color-secondary;
    padding: 16px 40px;
    text-align: center;
  }
  &__title {
    font-size: 20px;
    font-weight: 700;
    line-height: 24px;
    color: $color-primary;
  }
  &__close {
    position: absolute;
    top: 16px;
    right: 16px;
    font-size: 18px;
    color: $color-primary;
  }
  &__content {
    position: relative;
    background-color: $bg-color-primary;
    padding: 24px;

    @media screen and (max-width: $breakpoint-sm) {
      padding: 24px 16px;
    }
  }
  &__subtitle {
    text-align: center;
    margin-bottom: 24px;
  }
  &__input-wrapper {
    position: relative;
  }
  &__input {
    @include input-style;
    background-image: url('/images/search-icon-modal.svg');
    background-position: 16px center;
    background-repeat: no-repeat;
    background-size: 20px 20px;
    margin-bottom: 24px;
  }
  &__input-clear-btn {
    position: absolute;
    top: 14px;
    right: 16px;
    font-size: 18px;
    color: $color-secondary;
    line-height: 20px;
  }
  &__games-list {
    margin-bottom: 0;

    .games-list {
      &__nav-btn {
        display: none;
      }
      &__cards {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        max-height: calc(80vh - 264px);
        overflow-y: auto;

        @media screen and (max-width: $breakpoint-sm) {
          grid-template-columns: 1fr 1fr;
        }
      }
    }
    .game-card {
      width: auto;

      &__image {
        img {
          width: 100%;
          height: 100%;
          object-fit: cover;
          object-position: center top;
        }
      }
    }
  }
}

